--- a/src/index.css
+++ b/src/index.css
@@ -137,3 +137,12 @@ body.dark-mode .my-first
     color: #ffd43b;
     transform: translateY(-4px);
 }
+.btn-custom {
+  width: 50%;
+}
+
+@media (min-width: 768px) {
+  .btn-custom {
+    width: 25%;
+  }
+}
