--- a/src/index.css
+++ b/src/index.css
@@ -230,7 +230,7 @@ body.dark-mode .skill-card
 
   transition: all 0.2s ease;
   cursor: pointer;
-  padding: 10px;
+  padding: 0.2rem 08rem;   /* smaller padding */
 
   width: auto;              /* remove fixed width */
 }
